--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,14 @@
     "Welcome": {
         "text": "welcome users",
         "description": "Welcome to the best application on earth"
+    },
+    "loginButton": {
+        "text": "Login"
+    },
+    "signupButton": {
+        "text": "SignUp"
+    },
+    "logoutButton": {
+        "text": "Logout"
     }
 }
