minor change on sp dict

--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -4,7 +4,7 @@
         "description": "Welcome to the best application on earth"
     },
     "loginButton": {
-        "text": "Credenciales"
+        "text": "Conectar"
     },
     "signupButton": {
         "text": "Registrar"
