--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,18 @@
   },
   "logoutButton": {
     "text": "Logout"
-  }
+  },
+  "closeButton": {
+    "text": "Close"
+  },
+
+  "lblEmail": {
+      "text": "E-Mail",
+      "info": "Use your registered email"
+  },
+  "lblPassword": {
+    "text": "Password",
+    "info": "Type your password following our guidelines"
+}  
+
 }
